# AdvancedProgramming

./: README.md
HW1/: BattleManager.cpp  BattleManager.h  BattleShipGameFromFile.h  CMakeLists.txt  UserFleet.cpp  hw1.cpp  missileBoat.h
HW2/: BattleManager.cpp  BattleManager.h  BattleShipGameFromFile.cpp  BattleShipGameFromFile.h  ConsolePrinter.cpp  IBattleshipGameAlgo.h  InflatableBoat.cpp  InflatableBoat.h  NaiveAlgo.cpp  NaiveAlgo.h  Position.cpp  Position.h  Readme.txt  TestDoc.txt  Utility.cpp  Utility.h  battleship.h  hw1.cpp  students.txt  submarine.h
HW2/conf-files/: random.attack  random_attack.py
HW2/src/: BattleManager.cpp  BattleManager.h  BattleShipGameFromFile.cpp  BattleShipGameFromFile.h  BattleShipGameSmartAlgo.cpp  CMakeLists.txt  ConsolePrinter.cpp  ConsolePrinter.h  InflatableBoat.h  NaiveAlgo.cpp  NaiveAlgo.h  Position.h  Ship.cpp  Ship.h  UserFleet.cpp  UserFleet.h  Utility.cpp  Utility.h  battleship.cpp  hw2.cpp  missileBoat.cpp  missileBoat.h  submarine.cpp  submarine.h
HW3/: CMakeLists.txt  src.rar
HW3/boards/: bad_board_3.sboard
HW3/boards-old/: bad_board_2.sboard  good_board.sboard
HW3/boards-old2/: bad_board_1.sboard  bad_board_4.sboard
HW3/src/: AlgoDLL.cpp  AlgoDLL.h  AlgoStat.cpp  AlgoStat.h  BattleManager.cpp  BattleManager.h  BattleShipGameSmartAlgo.cpp  BattleShipGameSmartAlgo.h  BattleThreadPool.cpp  BattleThreadPool.h  BoardHandler.cpp  BoardHandler.h  BoardParser.cpp  BoardParser.h  ConcurentQueue.h  GameData.cpp  GameData.h  GameManager.cpp  GameManager.h  IBattleshipGameAlgo.h  InflatableBoat.cpp  InflatableBoat.h  Position.cpp  Position.h  SharedBoard.cpp  SharedBoard.h  Ship.cpp  Ship.h  Source.cpp  TournamentReporter.cpp  TournamentReporter.h  UserFleet.cpp  UserFleet.h  UserGameData.cpp  UserGameData.h  Utility.cpp  Utility.h  battleship.cpp  battleship.h  hw3.cpp  (+7 more)
HW4/src/: Group.h  GroupType.h  GroupValues.h  Matrix.h  Point.h  hw4.cpp
